--- a/evaluator.html
+++ b/evaluator.html
@@ -89,7 +89,7 @@
 					<div class="chatbody">
 						<div class="panel panel-primary">
 							<div class="panel-heading top-bar">
-								<div class="col-md-4 col-xs-4" style="text-align: right;">
+								<div class="col-md-4 col-xs-4" id="close-chat-div">
 									<a onclick="closeChat()"><span class="glyphicon glyphicon-remove icon_close" data-id="chat_window_1"></span></a>
 								</div>
 								<div class="col-md-8 col-xs-8">
