--- a/evaluator.html
+++ b/evaluator.html
@@ -30,7 +30,7 @@
 			<div id="dot-space"></div>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<ul class="navbar-nav">
+			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" id="helpDropdownButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Richieste d'aiuto
