--- a/player.html
+++ b/player.html
@@ -27,8 +27,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="/public/css/player.css">
-	<!--<link rel="stylesheet" href="/public/css/style_default.css">-->
-	<link rel="stylesheet" href="/public/css/style_egypt.css">
+	<link rel="stylesheet" href="/public/css/style_default.css">
+	<!--<link rel="stylesheet" href="/public/css/style_egypt.css">-->
 </head>
 <body>
 	<div id="generico">
