Meccaniche style storie

--- a/evaluator.html
+++ b/evaluator.html
@@ -17,12 +17,13 @@
 	<!-- Internal -->
 	<link rel="stylesheet" href="/public/css/evaluator.css">
 	<link rel="stylesheet" href="/public/css/chat.css">
+	<link rel="stylesheet" href="/public/css/story_fonts.css">
+	
 	<script src="/public/js/evaluator.js" charset="utf-8"></script>
 	<title>Evaluator</title>
 
 </head>
 <body>
-
 	<!--NAVBAR-->
 	<nav class="navbar navbar-expand-md navbar-dark bg-primary">
 		<button id="collapse-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
