--- a/author.html
+++ b/author.html
@@ -268,9 +268,18 @@
                             </div>
                             <div class="form-group col-1"></div>
                             <div class="form-group col-2">
-                                <label for="style-main-opacity">Opacità</label>
+                                <label for="style-main-border-color">Bordo:</label>
                             </div>
+                            <div class="form-group col-1">
+                                <input class="w-100 h-100" type="color" id="style-main-border-color">
+                            </div>
+                        </div>
+                        
+                        <div class="form-row">
                             <div class="form-group col-4">
+                                <label for="style-main-opacity">Opacità area attività</label>
+                            </div>
+                            <div class="form-group col-5">
                                 <input type="range" class="form-control-range" id="style-main-opacity" min="0" max="1" step="0.01">
                             </div>
                         </div>
@@ -284,7 +293,7 @@
                             </div>
                             <div class="form-group col-1"></div>
                             <div class="form-group col-2">
-                                <label for="style-buttons-text-color">Testo</label>
+                                <label for="style-buttons-text-color">Testo:</label>
                             </div>
                             <div class="form-group col-1">
                                 <input class="w-100 h-100" type="color" id="style-buttons-text-color">
