--- a/player.html
+++ b/player.html
@@ -27,7 +27,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<link rel="stylesheet" href="/public/css/player.css">
-	<link rel="stylesheet" href="/public/css/style_default.css">
+	<!--<link rel="stylesheet" href="/public/css/style_default.css">-->
 	<!--<link rel="stylesheet" href="/public/css/style_egypt.css">-->
 	<!--<link rel="stylesheet" href="/public/css/style_museum.css">-->
 
@@ -170,7 +170,8 @@
 			#div-grande {
 				font-family: $text_font;
 				color: $text_font_color;
-				border: 3px solid $activity_area_color;
+				border: 3px solid $activity_area_border;
+                background-color: $activity_area_color;
 			}
 
 			#chat-button, #help-button, #bottone-avanti {
