--- a/player.html
+++ b/player.html
@@ -80,7 +80,7 @@
 								</div>
 								<div class="col-md-8 col-xs-8">
 									<div class="glyphicon glyphicon-comment"></div>
-									<h2 id="chat-title">Valutatore</h5>
+									<h2 id="chat-title">Valutatore</h2>
 								</div>
 							</div>
 							<div id="chat-msgs" class="panel-body msg_container_base">
@@ -153,32 +153,26 @@
 				font-family: $title_font;
 				color: $title_font_color;
 			}
-
 			body {
 				background: $background;
 			}
-
 			#score {
 				color: $title_font_color;
 			}
-
 			#nome-attivita, #final-text, nome-missione {
 				font-family: $text_font;
 				color: $text_font_color;
 			}
-
 			#div-grande {
 				font-family: $text_font;
 				color: $text_font_color;
-				border: 3px solid $activity_area_border;
+				border: 3px solid $chat_color;
                 background-color: $activity_area_color;
 			}
-
 			#chat-button, #help-button, #bottone-avanti {
 				background-color: $buttons_color;
 				color: $buttons_text_color;
 			}
-
 			#chat .panel-heading {
 				background-color: $chat_color;
 				color: $chat_text_color;
@@ -187,6 +181,16 @@
 			#send-msg {
 				background-color: $chat_color;
 				color: $chat_text_color;
+			}
+			.sent-msgs {
+				background-color: $chat_color;
+				color: $chat_text_color;
+			}
+			#chat .glyphicon-remove {
+				color: $chat_text_color;
+			}
+			#chat .panel-primary {
+				border: 2px solid $chat_color;
 			}
 			#window-input-text > textarea {
 				background-color: $chat_color;
