--- a/player.html
+++ b/player.html
@@ -30,6 +30,7 @@
 	<!--<link rel="stylesheet" href="/public/css/style_default.css">-->
 	<!--<link rel="stylesheet" href="/public/css/style_egypt.css">-->
 	<!--<link rel="stylesheet" href="/public/css/style_museum.css">-->
+	<link rel="stylesheet" href="/public/css/story_fonts.css">
 
 </head>
 <body>
@@ -166,7 +167,7 @@
 			#div-grande {
 				font-family: $text_font;
 				color: $text_font_color;
-				border: 3px solid $chat_color;
+				border: 3px solid $activity_area_border;
                 background-color: $activity_area_color;
 			}
 			#chat-button, #help-button, #bottone-avanti {
@@ -209,7 +210,7 @@
 				color: $help_color;
 			}
 			.help-color-border {
-				border: 5px solid $chat_color;
+				border: 5px solid $activity_area_border;
 			}
 
 		</style>
