fixato upload player, TODO controllare corrispondenza attività correzione e risposte

--- a/player.html
+++ b/player.html
@@ -193,15 +193,13 @@
 				background-color: $chat_color;
 				color: $chat_text_color;
 			}
-
 			#window-input-text > button {
 				border: 1px solid $help_color;
+				color: $help_color;
 			}
-			
 			#send-new-req {
 				border-color: $help_color;
 			}
-
 			#close-help-pane {
 				color: $help_color;
 			}
