LAST ONE?? You wish boi

--- a/author.html
+++ b/author.html
@@ -231,7 +231,8 @@
                             </div>
                             <div class="form-group col-7">
                                 <select class="form-control" id="style-title-font">
-                                    <option>Helvetica Neue LT Std</option>
+                                    <option>Serif</option>
+                                    <option>Sans-Serif</option>
                                     <option>All The Roll</option>
                                     <option>ArtistikDemoVersio</option>
                                     <option>Egypt</option>
@@ -248,7 +249,8 @@
                             </div>
                             <div class="form-group col-7">
                                 <select class="form-control" id="style-text-font">
-                                    <option>Helvetica Neue LT Std</option>
+                                    <option>Serif</option>
+                                    <option>Sans-Serif</option>
                                     <option>All The Roll</option>
                                     <option>ArtistikDemoVersio</option>
                                     <option>Egypt</option>
