--- a/player.html
+++ b/player.html
@@ -177,7 +177,7 @@
 				color: $chat_text_color;
 			}
 			.sent-msgs {
-				background-color: $chat_color;
+				background-color: $chat_sent_color;
 				color: $chat_text_color;
 			}
 			#chat .glyphicon-remove {
